tdf#133898: get a context in default ctr (i18npool/calendarImpl)

See bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=161882

Change-Id: If5a6c5e2b52af9ef97af9522296aaa58352cfa69
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96161
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 56e2183b4916888fa104b62411151401932d8f92)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96179
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 0634b66805f0f4bc3f45a44b1f6a984f17ff8a09)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96421