i18npool/inc/calendarImpl.hxx
@@ -39,7 +39,7 @@ class CalendarImpl : public cppu::WeakImplHelper
 public:
 
     // Constructors
-    CalendarImpl() {};
+    CalendarImpl();
     CalendarImpl(const css::uno::Reference < css::uno::XComponentContext >& rxContext);
 
     /**
